--- a/dev/main.css
+++ b/dev/main.css
@@ -108,6 +108,10 @@ myViews {
   font-size: 0.75em;
 }
 
+.center {
+  text-align: center;
+}
+
 #xss a, #csrf a, .xss a, .csrf a {
   text-decoration: underline;
 }
