--- a/dev/main.css
+++ b/dev/main.css
@@ -214,9 +214,13 @@ history-logs {
     height: 16%;
     width: 16%
   }
-  #aboutPhoto > h4, #aboutPhoto > h6 {
-    margin: 0;
+  #aboutPhoto > h6 {
     padding: 0;
+
+  }
+
+  #aboutPhoto > h4 {
+    margin: 0;
   }
 
 }
