--- a/dev/main.css
+++ b/dev/main.css
@@ -38,11 +38,11 @@ custom-tag1 {
 
 #mainMenu {
   font-size: 30px;
-  font-size: 3.3vw;
+  font-size: 3.5vw;
 }
 
 #mainMenu a {
-  margin: 0 20px 0 20px;
+  margin: 0 2.5vw 0 2.5vw;
 }
 
 myViews {
