--- a/dev/main.css
+++ b/dev/main.css
@@ -167,6 +167,8 @@ myViews {
 
 .images {
   display: inline-block;
+  height: auto;
+  width: 40%;
 }
 
 .imagesParent {
@@ -246,6 +248,7 @@ history-logs {
   .halfCentered {
     margin-top: 4%;
     font-size: 0.8em;
+    font-size: 2.1vw;
     color: #555;
   }
 
