--- a/dev/main.css
+++ b/dev/main.css
@@ -155,10 +155,10 @@ myViews {
 }
 
 #jexIframe {
-  width: 100%;
-  height: 550px;
-  overflow: hidden;
+  height: 50vw;
+  width: 98%;
   border: none;
+  overflow: hidden;
 }
 
 .aToBlock {
