Update logs text responsive

--- a/dev/main.css
+++ b/dev/main.css
@@ -36,6 +36,11 @@ custom-tag1 {
   color: red;
 }
 
+history-logs {
+  font-size: 20px;
+  font-size: 2.6vw;
+}
+
 #mainMenu {
   font-size: 30px;
   font-size: 3.5vw;
